--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -Dmaven.javadoc.skip=true --file pom.xml -DskipTests
 
-      - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
+#      - name: Publish to GitHub Packages Apache Maven
+#        run: mvn deploy -DskipTests
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
 
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v3
