--- a/es4j-test/pom.xml
+++ b/es4j-test/pom.xml
@@ -74,6 +74,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.kjetland</groupId>
+      <artifactId>mbknor-jackson-jsonschema_2.13</artifactId>
+      <version>1.0.39</version>
+    </dependency>
+    <dependency>
       <groupId>io.es4j</groupId>
       <artifactId>es4j-postgres-storage</artifactId>
       <version>${project.version}</version>
