--- a/es4j-infrastructure/es4j-postgres-message-broker/pom.xml
+++ b/es4j-infrastructure/es4j-postgres-message-broker/pom.xml
@@ -37,6 +37,10 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.es4j</groupId>
+      <artifactId>es4j-http-bridge</artifactId>
+    </dependency>
   </dependencies>
 
 
